--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <!-- Floating WhatsApp icon -->
     <a href="https://lihi3.com/hZyF0" class="floating-whatsapp" onclick="return gtag_report_conversion('http://behavorchange.online/ws.html')">
-        <img src="./WhatsApp.svg" alt="WhatsApp Icon"> <!-- Fixed icon source -->
+        <img src="./DJI _files/WhatsApp.svg" alt="WhatsApp Icon"> <!-- Fixed icon source -->
     </a>
 
     <!-- Fixed WhatsApp button at bottom -->
