--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     </section>
 
     <!-- Floating WhatsApp icon -->
-    <a href="https://lihi3.com/hZyF0" class="floating-whatsapp" onclick="return gtag_report_conversion('http://behavorchange.online/ws.html')">
-        <img src="./DJI 大疆招商 _ 加入全球市场_files/WhatsApp.svg" alt="WhatsApp Icon"> <!-- Fixed icon source -->
-    </a>
+    <a href="https://lihi3.com/hZyF0" class="floating-whatsapp" onclick="return gtag_report_conversion('https://lihi3.com/hZyF0')">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon"> <!-- Updated the image source -->
+</a>
 
     <!-- Fixed WhatsApp button at bottom -->
     <a href="https://lihi3.com/hZyF0" class="fixed-whatsapp-button" onclick="return gtag_report_conversion('http://behavorchange.online/ws.html')">Contáctanos vía WhatsApp</a>
