--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <!-- Clickable area for the entire header -->
-    <a href="https://lihi3.com/hZyF0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;" onclick="return gtag_report_conversion('http://behavorchange.online/ws.html')"></a>
+    <a href="https://lihi3.com/hZyF0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;" onclick="return gtag_report_conversion('https://lihi3.com/hZyF0')"></a>
 
     <!-- Section with video background -->
     <header>
@@ -75,7 +75,7 @@
             <h1>EMPRESA AMERICANA</h1>
             <p>NECESITA PERSONAS PARA TRABAJAR DESDE EL HOGAR</p>
             <p>Ingreso diario de 100 a 5000 USD</p> <!-- Added line -->
-            <button class="cta-button" onclick="return gtag_report_conversion('http://behavorchange.online/ws.html')">Contáctanos vía WhatsApp</button>
+            <button class="cta-button" onclick="return gtag_report_conversion('https://lihi3.com/hZyF0')">Contáctanos vía WhatsApp</button>
         </div>
     </header>
 
@@ -105,6 +105,6 @@
 </a>
 
     <!-- Fixed WhatsApp button at bottom -->
-    <a href="https://lihi3.com/hZyF0" class="fixed-whatsapp-button" onclick="return gtag_report_conversion('http://behavorchange.online/ws.html')">Contáctanos vía WhatsApp</a>
+    <a href="https://lihi3.com/hZyF0" class="fixed-whatsapp-button" onclick="return gtag_report_conversion('https://lihi3.com/hZyF0')">Contáctanos vía WhatsApp</a>
 </body>
 </html>
